had to commit, idk wtf i did.

--- a/user/index.html
+++ b/user/index.html
@@ -2,8 +2,9 @@
 
 <head>
     <meta charset="UTF-8">
+    <link href="./prod/style.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="bg-gray-200 w-full h-full">
     
 </body>
