periodic commit because

--- a/user/index.html
+++ b/user/index.html
@@ -5,6 +5,6 @@
     <link href="./prod/style.css" rel="stylesheet">
 </head>
 
-<body class="bg-gray-200 w-full h-full">
+<body class="bg-frappe-550 w-full h-full">
     
 </body>
