apparently boring commit

--- a/user/index.html
+++ b/user/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <link href="./prod/style.css" rel="stylesheet">
 </head>
-<body>
-    <div class="bg-frappe-550 w-screen h-screen flex items-center justify-center">
+<body class="w-screen h-screen">
+    <div class="bg-frappe-550 w-screen h-17/18 flex items-center justify-center">
         <img src="src/cospi_white.svg" class="h-13 p-1 pe-3"></img><div class="bg-frappe-600 w-130 h-12 border-1 drop-shadow-lg drop-shadow-frappe-600/30 border-frappe-700 rounded-full flex items-center justify-between">
-            <input class="font-[DM_Sans] border-0 outline-0 text-frappe-950 ps-5 flex-1/1" autocomplete="off" placeholder="Type to start searching"/><img src="src/returnicon.svg" class="h-full p-3"></img>
+            <input class="font-[DM_Sans] border-0 outline-0 text-frappe-950 ps-5 flex-1/1" autocomplete="off" placeholder="Type to start searching" autofocus/><img src="src/returnicon.svg" class="h-full p-3"></img>
         </div>
     </div>
-    
+
+    <p class="bg-frappe-550 w-screen font-[DM_Sans] text-frappe-850 h-1/18 text-center text-sm">By using this service, you agree to our Terms of Service and Privacy Policy.</p>
     <p class="bg-frappe-500 w-screen font-[DM_Sans] text-frappe-950 p-3 text-center">Made with ❤️ at Korea · Privacy Policy · Terms of Service</p>
 </body>
