--- a/user/prod/footer.html
+++ b/user/prod/footer.html
@@ -1,1 +1,1 @@
-<p class="bg-frappe-500 w-screen font-[DM_Sans] text-frappe-950 p-3 text-center">Made with ❤️ at Korea · Privacy Policy · Terms of Service</p>
+<p class="bg-frappe-500 w-screen font-[DM_Sans] text-frappe-950 p-3 text-center">Made with ❤️ at Korea · <a href="/legal/privacy_policy.shtml">Privacy Policy</a> · <a href="/legal/terms_of_service.shtml">Terms of Service</a></p>
